[package]
name = "cardio-rs"
version = "0.1.8"
authors = ["Benjamin Gallois <benjamin@gallois.cc>"]
description = "A Rust library for computing heart rate variability (HRV) metrics from ECG and PPG data."
homepage = "https://github.com/bgallois/cardio-rs"
repository = "https://github.com/bgallois/cardio-rs"
documentation = "https://docs.rs/cardio-rs"
license = "MIT"
readme = "README.md"
keywords = ["HRV", "ECG", "PPG", "HR", "Variability"]
categories = [
  "science",
  "science::neuroscience",
  "mathematics",
  "no-std",
]
edition = "2024"

[features]
default = ["std"]
std = [
  "arrayvec/std",
  "num/std",
  "approx/std",
  "rand/std",
  "rand_distr/std",
  "polars-lazy",
  "polars",
  "interp",
  "find_peaks",
  "rustfft",
]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
find_peaks = { version = "0.1.5", optional = true, default-features = false }
interp = { version = "2.0.2", optional = true }
libm = { version = "0.2.11", default-features = false }
num = { version = "0.4.3", default-features = false, features = ["libm"] }
polars = { version = "0.46.0", features = ["polars-io"], optional = true, default-features = false }
polars-lazy = { version = "0.46.0", features = ["csv", "diff"], optional = true, default-features = false }
rustfft = { version = "6.2.0", optional = true, default-features = false }

[dev-dependencies]
approx = { version = "0.5"}
rand = { version = "0.9", features = ["alloc"] }
rand_distr = { version = "0.5", features = ["alloc"] }
