[package]
name = "cardio-rs"
version = "0.1.13"
authors = ["Benjamin Gallois <benjamin@gallois.cc>"]
description = "A Rust library for computing heart rate variability (HRV) metrics from ECG and PPG data."
homepage = "https://github.com/bgallois/cardio-rs"
repository = "https://github.com/bgallois/cardio-rs"
documentation = "https://docs.rs/cardio-rs"
license = "MIT"
readme = "README.md"
keywords = ["HRV", "ECG", "PPG", "HR", "Variability"]
categories = [
  "science",
  "science::neuroscience",
  "mathematics",
  "no-std",
]
edition = "2024"

[features]
default = ["std"]
std = [
  "num/std",
  "approx/std",
  "rand/std",
  "rand_distr/std",
  "polars-lazy",
  "polars",
  "find_peaks",
  "rustfft",
]

[dependencies]
find_peaks = { version = "0.1.5", optional = true, default-features = false }
libm = { version = "0.2.11", default-features = false }
num = { version = "0.4.3", default-features = false, features = ["libm"] }
polars = { version = "0.46.0", features = ["polars-io"], optional = true, default-features = false }
polars-lazy = { version = "0.46.0", features = ["csv", "diff"], optional = true, default-features = false }
rustfft = { version = "6.2.0", default-features = false, optional = true }

[dev-dependencies]
approx = { version = "0.5"}
rand = { version = "0.9", features = ["alloc"] }
rand_distr = { version = "0.5", features = ["alloc"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
